feat: add desantharakalam changes and occassion repo and entity